--- a/feedback.html
+++ b/feedback.html
@@ -5,296 +5,118 @@
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <title>Feedback</title>
     <style>
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #333;
-  color: white;
-}
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            color: white;
+            overflow: hidden; /* Hide overflow content */
+        }
 
-.video-background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  z-index: -1; /* Ensure the video is behind all other content */
-}
+        #bg-video {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            min-width: 100%;
+            min-height: 100%;
+            width: auto;
+            height: auto;
+            transform: translate(-50%, -50%);
+            z-index: -1;
+        }
 
-video#background-video {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transform: translate(-50%, -50%);
-}
+        /* Styles for the header and navigation */
+        header {
+            position: fixed;
+            height: 60px;
+            width: 100%;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 20px 30px;
+            transition: 0.5s;
+            background: black;
+        }
 
-header {
-  position: fixed;
-  height: 60px;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 20px 30px;
-  transition: 0.5s;
-  background: black;
-}
+        figure img {
+            height: 60px;
+            margin-right: auto;
+        }
 
-figure img {
-  height: 60px;
-  margin-right: auto;
-}
+        nav {
+            display: flex;
+            column-gap: 5rem;
+        }
 
-.bx {
-  color: white;
-}
+        nav ul {
+            display: flex;
+            gap: 30px;
+            list-style: none;
+        }
 
-nav {
-  display: flex;
-  column-gap: 5rem;
-}
+        nav li {
+            position: relative;
+        }
 
-nav ul {
-  display: flex;
-  gap: 30px;
-  list-style: none;
-}
+        nav a {
+            font-size: 20px;
+            letter-spacing: 2px;
+            text-decoration: none;
+            color: white;
+            position: relative;
+            transition: color 0.4s;
+        }
 
-nav li {
-  position: relative;
-}
+        nav a::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            transform: scaleX(0);
+            height: 2px;
+            bottom: -5px;
+            left: 0;
+            background-color: red;
+            transform-origin: bottom right;
+            transition: transform 0.25s ease-out;
+        }
 
-nav a {
-  font-size: 20px;
-  letter-spacing: 2px;
-  text-decoration: none;
-  color: white;
-  position: relative;
-  transition: color 0.4s;
-}
+        nav a:hover {
+            animation: colorChange 0.5s forwards;
+        }
 
-nav a::after {
-  content: '';
-  position: absolute;
-  width: 100%;
-  transform: scaleX(0);
-  height: 2px;
-  bottom: -5px;
-  left: 0;
-  background-color: red;
-  transform-origin: bottom right;
-  transition: transform 0.25s ease-out;
-}
+        nav a:hover::after {
+            transform: scaleX(1);
+            transform-origin: bottom left;
+            animation: underlineChange 0.5s forwards;
+        }
 
-nav a:hover {
-  animation: colorChange 0.5s forwards;
-}
+        @keyframes colorChange {
+            0% {
+                color: white;
+            }
 
-nav a:hover::after {
-  transform: scaleX(1);
-  transform-origin: bottom left;
-  animation: underlineChange 0.5s forwards;
-}
+            50% {
+                color: red;
+            }
 
-@keyframes colorChange {
-  0% {
-    color: white;
-  }
-  50% {
-    color: red;
-  }
-  100% {
-    color: green;
-  }
-}
+            100% {
+                color: green;
+            }
+        }
 
-@keyframes underlineChange {
-  0% {
-    background-color: red;
-  }
-  100% {
-    background-color: green;
-  }
-}
+        @keyframes underlineChange {
+            0% {
+                background-color: red;
+            }
 
-#menu {
-  font-size: 24px;
-  cursor: pointer;
-  z-index: 1000001;
-  display: none;
-}
+            100% {
+                background-color: green;
+            }
+        }
 
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-  padding-top: 80px;
-}
-
-.mySlides {
-  display: none;
-  width: 100%;
-  position: relative;
-  align-items: center;
-}
-
-.mySlides img {
-  width: 100%;
-}
-
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from { opacity: 0.4; }
-  to { opacity: 1; }
-}
-
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  background-color: rgba(0,0,0,0.5);
-}
-
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-.prev {
-  left: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-h1 {
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-  color: white;
-  font-size: 2.5rem;
-}
-
-h2 {
-  max-width: 968px;
-  margin: 100px auto 10px;
-  font-size: 24px;
-  font-weight: 500;
-  text-transform: uppercase;
-  border-bottom: 4px solid blue;
-  animation: headingUnderlineChange 5s infinite;
-}
-
-@keyframes headingUnderlineChange {
-  0% {
-    border-bottom-color: blue;
-  }
-  25% {
-    border-bottom-color: red;
-  }
-  50% {
-    border-bottom-color: black;
-  }
-  75% {
-    border-bottom-color: green;
-  }
-  100% {
-    border-bottom-color: blue;
-  }
-}
-
-.movies {
-  max-width: 968px;
-  margin: 2rem auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-  gap: 3rem;
-}
-
-article {
-  width: 100%;
-  height: auto;
-  cursor: pointer;
-}
-
-article img {
-  object-fit: cover;
-  transition: 0.2s all linear;
-}
-
-article img:hover {
-  transform: translateY(-10px);
-}
-
-footer {
-  background-color: black;
-  color: white;
-  padding: 20px;
-  display: flex;
-  justify-content: space-between;
-}
-
-footer .social-media-icons {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-}
-
-footer .social-media-icons li {
-  margin-right: 10px;
-}
-
-footer img {
-  width: 25px;
-}
-
-footer img:hover {
-  opacity: 0.8;
-  background: black;
-}
-
-footer p {
-  margin: 0;
-}
         /* Additional CSS to style the form and footer */
         #feedback-form {
             margin: 50px auto;
@@ -303,6 +125,7 @@ footer p {
             background-color: rgba(255, 255, 255, 0.8); /* Add some opacity to make the form readable */
             padding: 20px;
             border-radius: 10px;
+            color: black; /* Adjust text color for better readability */
         }
 
         #feedback-form label,
@@ -325,6 +148,38 @@ footer p {
             border-radius: 5px;
             cursor: pointer;
         }
+
+        footer {
+            background-color: black;
+            color: white;
+            padding: 20px;
+            display: flex;
+            justify-content: space-between;
+        }
+
+        footer .social-media-icons {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+        }
+
+        footer .social-media-icons li {
+            margin-right: 10px;
+        }
+
+        footer img {
+            width: 25px;
+        }
+
+        footer img:hover {
+            opacity: 0.8;
+            background: black;
+        }
+
+        footer p {
+            margin: 0;
+        }
     </style>
 </head>
 
@@ -335,9 +190,9 @@ footer p {
         <!-- Add additional source elements for other video formats -->
         Your browser does not support the video tag.
     </video>
+
     <header>
         <a href="#top"><img alt="logo" height="90" src="R.png" width="100"></a>
-        </a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -358,8 +213,8 @@ footer p {
         <input type="text" id="name" name="name" required>
         <br>
         <label for="feedback">Feedback:</label>
-        <textarea name="feedback" id="feedback" cols="30" rows="10" placeholder="Please leave your feedback here..."
-            required></textarea>
+        <textarea name="feedback" id="feedback" cols="30" rows="10"
+            placeholder="Please leave your feedback here..." required></textarea>
         <br>
         <input type="submit" value="Submit">
     </form>
@@ -376,10 +231,6 @@ footer p {
             Discover more on our socials. Follow us for exclusive content. Your feedback matters to us! Let's create
             something amazing together.</p>
     </footer>
-
-    <script>
-        // JavaScript code can be added here for form submission handling or other functionality
-    </script>
 </body>
 
 </html>
