--- a/feedback.html
+++ b/feedback.html
@@ -134,6 +134,8 @@
             display: block;
             width: 100%;
             margin-bottom: 10px; /* Add spacing between elements */
+            padding: 8px;
+            box-sizing: border-box; /* Ensure padding and border are included in the element's total width and height */
         }
 
         #feedback-form textarea {
@@ -208,14 +210,11 @@
     <form id="feedback-form">
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
-        <br>
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
-        <br>
         <label for="feedback">Feedback:</label>
         <textarea name="feedback" id="feedback" cols="30" rows="10"
             placeholder="Please leave your feedback here..." required></textarea>
-        <br>
         <input type="submit" value="Submit">
     </form>
 
