--- a/TV Shows.html
+++ b/TV Shows.html
@@ -57,7 +57,10 @@
   <section>
     <h2>What's Hot</h2>
     <div class="movies">
+     <figure>
       <img src="winchesters.jpeg" width="149" alt="What's Hot Movie 1" height="234">
+      <figcaption>Winchesters</figcaption>
+    </figure>
       <img src="twilght.jpeg" width="149" alt="What's Hot Movie 2" height="234">
       <img src="Flash.jpg" width="149" alt="What's Hot Movie 3" height="234">
       <img src="all.jpeg" width="149" alt="What's Hot Movie 4" height="234">
