--- a/TV Shows.html
+++ b/TV Shows.html
@@ -61,10 +61,22 @@
       <img src="winchesters.jpeg" width="149" alt="What's Hot Movie 1" height="234">
       <figcaption>Winchesters</figcaption>
     </figure>
+      <figure>
       <img src="twilght.jpeg" width="149" alt="What's Hot Movie 2" height="234">
+        <figcaption>Twilight</figcaption>
+      </figure>
+      <figure>
       <img src="Flash.jpg" width="149" alt="What's Hot Movie 3" height="234">
+        <figcaption>The Flash</figcaption>
+      </figure>
+      <figure>
       <img src="all.jpeg" width="149" alt="What's Hot Movie 4" height="234">
+        <figcaption>All American</figcaption>
+      </figure>
+      <figure>
       <img src="NCIS.jpeg" width="149" alt="What's Hot Movie 5" height="234">
+        <figcaption>NCIS</figcaption>
+      </figure>
     </div>
   </section>
 
