--- a/TV Shows.html
+++ b/TV Shows.html
@@ -59,23 +59,23 @@
     <div class="movies">
      <figure>
       <img src="winchesters.jpeg" width="149" alt="What's Hot Movie 1" height="234">
-      <figcaption>Winchesters</figcaption>
+      <h3>Winchesters</h3>
     </figure>
       <figure>
       <img src="twilght.jpeg" width="149" alt="What's Hot Movie 2" height="234">
-        <figcaption>Twilight</figcaption>
+        <h3>Twilight</h3>
       </figure>
       <figure>
       <img src="Flash.jpg" width="149" alt="What's Hot Movie 3" height="234">
-        <figcaption>The Flash</figcaption>
+        <h3>The Flash</h3>
       </figure>
       <figure>
       <img src="all.jpeg" width="149" alt="What's Hot Movie 4" height="234">
-        <figcaption>All American</figcaption>
+        <h3>All American</h3>
       </figure>
       <figure>
       <img src="NCIS.jpeg" width="149" alt="What's Hot Movie 5" height="234">
-        <figcaption>NCIS</figcaption>
+        <h3>NCIS</h3>
       </figure>
     </div>
   </section>
