--- a/TV Shows.html
+++ b/TV Shows.html
@@ -59,7 +59,7 @@
     <div class="movies">
      <figure>
       <img src="winchesters.jpeg" width="149" alt="What's Hot Movie 1" height="234">
-      <h3>Winchesters</h3>
+      <p class="movie-name">Winchesters</p>
     </figure>
       <figure>
       <img src="twilght.jpeg" width="149" alt="What's Hot Movie 2" height="234">
