--- a/movies.html
+++ b/movies.html
@@ -70,6 +70,7 @@
       <a href="blue.html"><img src="blue.jpeg" width="149" alt="Trending Movies" height="234"></a>
       <a href="nun.html"><img src="nun.jpeg" width="149" alt="Trending Movies" height="234"></a>
       <a href="man.html"><img src="monkey.jpeg" width="149" alt="Trending Movies" height="234"></a>
+      <a href="swat"><img src="swat.jpeg" width="149" alt="Trending Movies" height="234"></a>
     </div>
   </section>
 
