Update games & apps.html

--- a/games & apps.html
+++ b/games & apps.html
@@ -60,6 +60,7 @@
        <a href="fifa22.html"><img src="fifa22.jpeg" width="149" alt="Pc Games" height="234"></a>
        <a href="call.html"><img src="call of duty.jpeg" width="149" alt="Pc Games" height="234"></a>
        <a href="nfs.html"><img src="ned.jpeg" width="149" alt="Pc Games" height="234"></a>
+       <a href="san.html"><img src="san.jpeg" width="149" alt="Pc Games" height="234"></a>
     </div>
   </section>
  <section>
