--- a/flash.html
+++ b/flash.html
@@ -1,84 +1,32 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="UTF-8">
-    <title>Warner Bros Website</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #333;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        nav ul li {
-            display: inline;
-            margin-right: 20px;
-        }
-
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-        }
-
-        .image-grid {
-            display: grid;
-            grid-template-columns: auto 1fr;
-            grid-gap: 20px;
-            padding: 20px;
-        }
-
-        .image-item img {
-            width: 100%;
-            height: auto;
-            max-width: 400px;
-            display: block;
-            margin: 0 auto;
-        }
-
-        .image-title {
-            font-size: 24px;
-            font-weight: bold;
-            margin-top: 10px;
-        }
-
-        .about {
-            padding: 20px;
-        }
-
-        .about p {
-            margin-bottom: 20px;
-            line-height: 1.5;
-        }
-    </style>
+  <title>Flash</title>
+  <link rel="stylesheet" type="text/css" href="tvshows.css">
 </head>
-
 <body>
-    <header>
-  <a href="#top"><img alt="logo" height="90" src="R.png" width="100"></a>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="movies.html">Movies</a></li>
-                <li><a href="TV Shows.html">TV Shows</a></li>
-                <li><a href="games & apps.html">Games & Apps</a></li>
-                <li><a href="collections.html">Collections</a></li>
-                <li><a href="feedback.html">Feedback</a></li>
-            </ul>
-        </nav>
-    </header>
+  <div class="video-background">
+    <video autoplay muted loop id="background-video">
+      <source src="background.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+  <header>
+    <figure>
+      <a href="#top"><img alt="logo" height="90" src="R.png" width="100"></a>
+    </figure>
+    <div class="bx bx-menu" id="menu"></div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="movies.html">Movies</a></li>
+        <li><a href="TV Shows.html">TV Shows</a></li>
+        <li><a href="games & apps.html">Games & Apps</a></li>
+        <li><a href="collections.html">Collections</a></li>
+        <li><a href="feedback.html">Feedback</a></li>
+      </ul>
+    </nav>
+  </header>
     <div class="image-grid">
         <div class="image-item">
             <img alt="The Flash" src="Flash.jpg">
@@ -91,6 +39,16 @@
             <iframe width="958" height="539" src="https://www.youtube.com/embed/r51cYVZWKdY" title="The Flash - Official Trailer 2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </div>
+     <footer>
+        <ul class="social-media-icons">
+            <li><a href="https://whatsapp.com/channel/0029VaNY5hn84OmEJRYEkX3C"><img src="whATSP.png" alt="WhatsApp"></a></li>
+            <li><a href="https://www.tiktok.com/@warnerbrosmovies?lang=en"><img src="TIKTOK.jpeg" alt="TikTok"></a></li>
+            <li><a href="https://x.com/WBHomeEnt"><img src="TWITTER.jpeg" alt="Twitter"></a></li>
+            <li><a href="https://www.instagram.com/warnerbrosentertainment/"><img src="IG.png" alt="Instagram"></a></li>
+            <!-- Add more social media icons as needed -->
+        </ul>
+        <p>&copy; 2024 Warner Bros Website. All rights reserved. Join our community today! Stay connected with us. Discover more on our socials. Explore our latest updates. Follow us for exclusive content. Experience the world of Warner Bros. Your feedback matters to us! Let's create something amazing together.</p>
+    </footer>
 </body>
 
 </html>
