--- a/bee.html
+++ b/bee.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Tv Shows</title>
+  <title>Beekeeper</title>
   <link rel="stylesheet" type="text/css" href="tvshows.css">
 </head>
 <body>
